# GAMRCPP

./: CMakeLists.txt  README.md  package.xml
include/gamrcpp_pkg/: basics.h  debug.h  gamrcpp.h  gamrcpp_main.h  ma.h  rviz.h
input/: robot_ws.txt
msg/: CellInfo.msg  PlanInstance.msg
output/: 0_capl.txt  2_capl.txt  cap_0.csv  cap_1.csv  cap_2.csv  cap_3.csv  cap_4.csv  cap_5.csv  fp_stat.txt  result.txt  resultPerHorizon.txt
src/: gamrcpp.cpp  gamrcpp_main.cpp  ma.cpp  robot.cpp  rviz.cpp  start_robots.cpp
srv/: PlanForHorizon.srv  ShareLocalInformation.srv
